<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fris_pink"
    tools:context=".ui.main.CarteFragment">


    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@color/fris_white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoMenu_imageView5"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/logo_main" />


        <TextView
            android:id="@+id/h1_iceCream_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/alt1"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/velgsmak_iceCream_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sueellenfrancisco_regular"
            android:gravity="center"
            android:text="@string/alt1_1"
            android:textAllCaps="true"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/iceCreamFlavourOne_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/smak1"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/iceCreamFlavourTwo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/smak2"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/iceCreamFlavourThree_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/smak3"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/velgtilsetning_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sueellenfrancisco_regular"
            android:gravity="center"
            android:text="@string/alt1_2"
            android:textAllCaps="true"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/tilsetningOne_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/brownies"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/tilsetningTwo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/oreobiter"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/tilsetningThree_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/sjokoladebiter"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/tilsetningFour_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/marshmellows"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/velgTopping_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sueellenfrancisco_regular"
            android:gravity="center"
            android:text="@string/alt1_3"
            android:textAllCaps="true"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/toppingOne_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/kaktepynt"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/toppingTwo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/kokosflak"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/toppingThree_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/sjokolade"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/toppingFour_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/fersk_frukt"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/h1_shakes_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/alt2"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/velgSmak_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sueellenfrancisco_regular"
            android:gravity="center"
            android:text="@string/velg_smak"
            android:textAllCaps="true"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/shakeFlavourOne_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/smak1"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/shakeFlavourTwo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/smak2"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/shakeFlavourThree_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/smak3"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/h1_kaffe_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/alt3"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/velgType_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sueellenfrancisco_regular"
            android:gravity="center"
            android:text="@string/velg_type"
            android:textAllCaps="true"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/coffeeTypeOne_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/coffeeTypeTwo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/cortado"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/coffeeTypeThree_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/espresso"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go2order_button"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/abrilfatface_regular"
            android:text="@string/bestille"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/fris_light_pink"
            android:textSize="@dimen/h4" />


    </LinearLayout>

    <ImageView
        android:id="@+id/click_imageView"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_205sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:src="@drawable/click" />

</RelativeLayout>