<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.BurgerFragment"
    android:background="@color/fris_light_pink"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/hidden_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menu_closed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/hidden_imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/fris_pink"
        android:gravity="center">

        <Button
            android:id="@+id/meny_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/abrilfatface_regular"
            android:text="@string/meny"
            android:textAllCaps="false"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h2"
            android:layout_marginTop="@dimen/_10sdp" />

        <Button
            android:id="@+id/bestille_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/abrilfatface_regular"
            android:text="@string/bestille"
            android:textAllCaps="false"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h2" />

        <Button
            android:id="@+id/kontakt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/abrilfatface_regular"
            android:text="@string/kontakt"
            android:textAllCaps="false"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h2"/>

        <Button
            android:id="@+id/nyhet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/abrilfatface_regular"
            android:text="@string/nyhet"
            android:textAllCaps="false"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h2"/>


        <ImageView
            android:id="@+id/scraperOpen_imageView"
            android:layout_width="@dimen/_85sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/menu_open" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

