<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/orderCard_cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/fris_light_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/orderDescriptionFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/yourOrderType_textView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"
                android:fontFamily="@font/sueellenfrancisco_regular"
                android:text="@string/dinIs"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/fris_blue"
                android:textSize="@dimen/h3"
                app:layout_constraintBottom_toTopOf="@id/yourOrderDesc_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yourOrderDesc_textView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_extralight"
                android:text="@string/explanationOrder"
                android:textAlignment="center"
                android:textColor="@color/fris_dark_pink"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/buttons_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yourOrderType_textView" />

            <TableLayout
                android:id="@+id/buttons_frame"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yourOrderDesc_textView">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/minus_button"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sueellenfrancisco_regular"
                        android:text="@string/minus"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/fris_blue"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/placeholderNumber_textView"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sueellenfrancisco_regular"
                        android:text="@string/placeholderNumber"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/fris_blue"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/plus_button"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sueellenfrancisco_regular"
                        android:text="@string/plus"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/fris_blue"
                        android:textSize="40sp" />
                </TableRow>

            </TableLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>


