<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fris_light_pink"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/contact_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/contact2_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sueellenfrancisco_regular"
            android:gravity="center"
            android:text="@string/HER"
            android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/h1" />

        <TextView
            android:id="@+id/contact3_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:gravity="center"
            android:text="@string/contactTwo"
            android:textColor="@color/fris_dark_pink"
            android:textSize="@dimen/h4" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_30sdp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:srcCompat="@drawable/fris_some_insta" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:srcCompat="@drawable/fris_some_mail" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:srcCompat="@drawable/fris_some_face" />
        </TableRow>

        <ImageView
            android:id="@+id/backArrowContact_imageView"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back_arrow" />

    </LinearLayout>
</FrameLayout>